--- a/ipatests/prci_definitions/nightly_ipa-4-6.yaml
+++ b/ipatests/prci_definitions/nightly_ipa-4-6.yaml
@@ -1134,3 +1134,39 @@ jobs:
         template: *ci-master-f27
         timeout: 7200
         topology: *adroot_adchild_adtree_master_1client
+
+  fedora-27/test_crlgen_manage:
+    requires: [fedora-27/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-27/build_url}'
+        test_suite: test_integration/test_crlgen_manage.py
+        template: *ci-master-f27
+        timeout: 3600
+        topology: *master_1repl
+
+  fedora-27/nfs:
+    requires: [fedora-27/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-27/build_url}'
+        test_suite: test_integration/test_nfs.py
+        template: *ci-master-f27
+        timeout: 9000
+        topology: *master_2repl_1client
+
+  fedora-27/test_server_del:
+    requires: [fedora-27/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-27/build_url}'
+        test_suite: test_integration/test_server_del.py
+        template: *ci-master-f27
+        timeout: 10800
+        topology: *master_2repl_1client
