--- a/ipatests/prci_definitions/nightly_ipa-4-6.yaml
+++ b/ipatests/prci_definitions/nightly_ipa-4-6.yaml
@@ -1254,3 +1254,15 @@ jobs:
         template: *ci-master-f27
         timeout: 10800
         topology: *master_2repl_1client
+
+  fedora-27/test_otp:
+    requires: [fedora-27/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-27/build_url}'
+        test_suite: test_integration/test_otp.py
+        template: *ci-master-f27
+        timeout: 3600
+        topology: *master_1repl
