--- a/freeipa.spec.in
+++ b/freeipa.spec.in
@@ -1428,6 +1428,7 @@ fi
 # We need the whole subtree in both cases below
 %{_usr}/share/ipa/gc
 %{_libexecdir}/ipa/gc
+%{_libexecdir}/ipa/gc/ipa-gcsyncd
 %attr(755,root,root) %{_libdir}/samba/pdb/ipasam.so
 %attr(755,root,root) %{plugin_dir}/libipa_cldap.so
 %{_datadir}/ipa/ipa-cldap-conf.ldif
@@ -1437,6 +1438,7 @@ fi
 %{_sysconfdir}/oddjobd.conf.d/oddjobd-ipa-trust.conf
 %%attr(755,root,root) %{_libexecdir}/ipa/oddjob/com.redhat.idm.trust-fetch-domains
 %{python3_sitelib}/ipaserver/globalcatalog
+%attr(644,root,root) %{_unitdir}/ipa-gcsyncd.service
 
 # ONLY_CLIENT
 %endif
