--- a/ipatests/prci_definitions/temp_commit.yaml
+++ b/ipatests/prci_definitions/temp_commit.yaml
@@ -47,32 +47,6 @@ topologies:
     memory: 14500
 
 jobs:
-  fedora-previous/build:
-    requires: []
-    priority: 100
-    job:
-      class: Build
-      args:
-        git_repo: '{git_repo}'
-        git_refspec: '{git_refspec}'
-        template: &ci-master-previous
-          name: freeipa/ci-master-f31
-          version: 0.0.5
-        timeout: 1800
-        topology: *build
-
-  fedora-previous/test_http_kdc_proxy:
-    requires: [fedora-latest/build]
-    priority: 50
-    job:
-      class: RunPytest
-      args:
-        build_url: '{fedora-previous/build_url}'
-        test_suite: test_integration/test_http_kdc_proxy.py
-        template: *ci-master-previous
-        timeout: 7200
-        topology: *ad_master_2client
-
   fedora-rawhide/build:
     requires: []
     priority: 100
@@ -99,3 +73,16 @@ jobs:
         template: *ci-master-frawhide
         timeout: 7200
         topology: *ad_master_2client
+
+  fedora-rawhide/test_backup_and_restore_TestBackupAndRestoreTrust:
+    requires: [fedora-rawhide/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-rawhide/build_url}'
+        update_packages: True
+        test_suite: test_integration/test_backup_and_restore.py::TestBackupAndRestoreTrust
+        template: *ci-master-frawhide
+        timeout: 7200
+        topology: *master_1repl
