--- a/ipatests/prci_definitions/temp_commit.yaml
+++ b/ipatests/prci_definitions/temp_commit.yaml
@@ -47,7 +47,7 @@ topologies:
     memory: 14500
 
 jobs:
-  fedora-rawhide/build:
+  fedora-latest/build:
     requires: []
     priority: 100
     job:
@@ -55,34 +55,34 @@ jobs:
       args:
         git_repo: '{git_repo}'
         git_refspec: '{git_refspec}'
-        template: &ci-master-frawhide
-          name: freeipa/ci-master-frawhide
-          version: 0.1.2
+        template: &ci-master-latest
+          name: freeipa/ci-master-f32
+          version: 0.0.3
         timeout: 1800
         topology: *build
 
-  fedora-rawhide/test_http_kdc_proxy:
-    requires: [fedora-rawhide/build]
+  fedora-latest/test_http_kdc_proxy:
+    requires: [fedora-latest/build]
     priority: 50
     job:
       class: RunPytest
       args:
-        build_url: '{fedora-rawhide/build_url}'
+        build_url: '{fedora-latest/build_url}'
         update_packages: True
         test_suite: test_integration/test_http_kdc_proxy.py
-        template: *ci-master-frawhide
+        template: *ci-master-latest
         timeout: 7200
         topology: *ad_master_2client
 
-  fedora-rawhide/test_backup_and_restore_TestBackupAndRestoreTrust:
-    requires: [fedora-rawhide/build]
+  fedora-latest/test_backup_and_restore_TestBackupAndRestoreTrust:
+    requires: [fedora-latest/build]
     priority: 50
     job:
       class: RunPytest
       args:
-        build_url: '{fedora-rawhide/build_url}'
+        build_url: '{fedora-latest/build_url}'
         update_packages: True
         test_suite: test_integration/test_backup_and_restore.py::TestBackupAndRestoreTrust
-        template: *ci-master-frawhide
+        template: *ci-master-latest
         timeout: 7200
         topology: *master_1repl
