--- a/ipatests/prci_definitions/temp_commit.yaml
+++ b/ipatests/prci_definitions/temp_commit.yaml
@@ -61,14 +61,28 @@ jobs:
         timeout: 1800
         topology: *build
 
-  fedora-latest/temp_commit:
+  fedora-latest/test_adtrust_install:
     requires: [fedora-latest/build]
-    priority: 50
+    priority: 100
     job:
       class: RunPytest
       args:
         build_url: '{fedora-latest/build_url}'
-        test_suite: test_integration/test_REPLACEME.py
+        test_suite: test_integration/test_adtrust_install.py
         template: *ci-master-latest
         timeout: 3600
-        topology: *master_1repl_1client
+        topology: *master_1repl
+        update_packages: yes
+
+#  fedora-latest/test_trust:
+#    requires: [fedora-latest/build]
+#    priority: 50
+#    job:
+#      class: RunADTests
+#      args:
+#        build_url: '{fedora-latest/build_url}'
+#        test_suite: test_integration/test_trust.py
+#        template: *ci-master-latest
+#        timeout: 9000
+#        topology: *adroot_adchild_adtree_master_1client
+#        update_packages: yes
