--- a/ipatests/prci_definitions/temp_commit.yaml
+++ b/ipatests/prci_definitions/temp_commit.yaml
@@ -45,6 +45,11 @@ topologies:
     name: adroot_adchild_adtree_master_1client
     cpu: 8
     memory: 14500
+  adroot_adroot-client_master_replica_client: &adroot_adroot-client_master_replica_client
+    name: adroot_adroot-client_master_replica_client
+    cpu: 8
+    memory: 13000
+
 
 jobs:
   fedora-latest/build:
@@ -61,14 +66,16 @@ jobs:
         timeout: 1800
         topology: *build
 
-  fedora-latest/temp_commit:
+  fedora-latest/test_global_catalog:
     requires: [fedora-latest/build]
     priority: 50
     job:
-      class: RunPytest
+      class: RunADTests
       args:
         build_url: '{fedora-latest/build_url}'
-        test_suite: test_integration/test_REPLACEME.py
+        test_suite: test_integration/test_global_catalog.py
         template: *ci-master-latest
-        timeout: 3600
-        topology: *master_1repl_1client
+        timeout: 7200
+        topology: *adroot_adroot-client_master_replica_client
+        update_packages: True
+        post_setup_script: "dnf copr enable -y abbra/gc-wip && dnf update -y --exclude=freeipa-*,python*-ipa*"
