temporary disable gpg check when installing packages in PR-CI

--- a/ipatests/prci_definitions/temp_commit.yaml
+++ b/ipatests/prci_definitions/temp_commit.yaml
@@ -78,4 +78,4 @@ jobs:
         timeout: 7200
         topology: *adroot_adroot-client_master_replica_client
         update_packages: True
-        post_setup_script: "dnf copr enable -y abbra/gc-wip && dnf update -y --exclude=freeipa-*,python*-ipa*"
+        post_setup_script: "dnf copr enable -y abbra/gc-wip && dnf update -y --nogpgcheck --exclude=freeipa-*,python*-ipa*"
